<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">末日围城</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="play">开始游戏</string>
	<string name="rank">排行榜</string>
	<string name="upgrade">游戏升级</string>
	<string name="level_1_1">Dark Forest</string>
	<string name="new_round">游戏未解锁</string>
	
	<string name="paused">游戏暂停中。。。</string>
	<string name="over">游戏结束。。。</string>
	<string name="next">下一关</string>
	<string name="restart">重新开始</string>
	
	<string name="close">Close</string>
    <string name="open">Open</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
</resources>
