<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        
        <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        	<ImageView
			    android:id="@+id/playIcon"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/play_icon"
			    android:layout_alignParentTop="true"
			    android:layout_centerHorizontal="true"/>
			
        	<TextView 
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/play"
        	    android:layout_below="@id/playIcon"
        	    android:layout_centerHorizontal="true"
        	    android:layout_marginTop="10dp"
        	    android:textStyle="bold"
        	    />
       		<ImageView
       		    android:id="@+id/rankIcon"
       		    android:layout_width="70dp"
       		    android:layout_height="70dp"
       		    android:layout_below="@+id/playIcon"
       		    android:layout_toLeftOf="@id/playIcon"
       		    android:src="@drawable/rank_icon" />

       		<TextView
       		    android:layout_width="wrap_content"
       		    android:layout_height="wrap_content"
       		    android:layout_alignLeft="@+id/rankIcon"
       		    android:layout_alignRight="@+id/rankIcon"
       		    android:layout_below="@id/rankIcon"
       		    android:layout_marginTop="10dp"
       		    android:text="@string/rank"
       		    android:textStyle="bold" 
       		    android:gravity="center_horizontal"/>

       		<ImageView
			        android:id="@+id/upgradeIcon"
			        android:layout_width="70dp"
			        android:layout_height="70dp"
			        android:src="@drawable/upgrade_icon"
			       	android:layout_below="@id/playIcon"
			       	android:layout_toRightOf="@id/playIcon"
			       	/>

       		<TextView
       		    android:layout_width="wrap_content"
       		    android:layout_height="wrap_content"
       		    android:layout_alignLeft="@id/upgradeIcon"
       		    android:layout_alignRight="@+id/upgradeIcon"
       		    android:layout_below="@id/upgradeIcon"
       		    android:layout_marginTop="10dp"
       		    android:text="@string/upgrade"
       		    android:textStyle="bold" 
       		    android:gravity="center_horizontal"
       		    />

    	</RelativeLayout>
    </LinearLayout>

</LinearLayout>